refactor: supprimer le code mort et la configuration sans effet
- `PlanningService.defaultUnimprovedSecondsLimit` : champ `final` affecté au
  constructeur et jamais lu. La valeur est déjà consommée par
  `applyTermination`. Un champ conservé sans lecteur fait croire que la limite
  de plateau est réutilisée ailleurs — elle ne l'est pas.
- `ReferenceDataService.GROUPE_CRENEAU_DEFAUT_ID` : vestige des groupes de
  créneaux supprimés (#172), zéro référence.
- `quarkus.http.header."Referrer-Policy".value=same-origin` : ligne sans effet.
  `EnTetesSecuriteFilter` pose `no-referrer` sur toutes les réponses et gagne
  systématiquement (prouvé par `EnTetesSecuriteTest`), et `docs/securite.md`
  documente bien `no-referrer`. La configuration annonçait donc l'inverse de ce
  qui est appliqué, sur un en-tête qui protège le jeton de l'espace animateur.
  La justification métier est déplacée sur le filtre, seul endroit qui décide.
- Deux `collect(Collectors.toList())` résiduels remplacés par `toList()`
  (aucun appelant ne mute la liste rendue).

Signed-off-by: Sylvain <git@sylvain.dev>
Co-Authored-By: Claude <noreply@anthropic.com>